# Baxter-CPP

./: README.md
baxter_ikfast/baxter_ikfast_left_arm_plugin/src/: baxter_left_arm_ikfast_solver.cpp
baxter_ikfast/baxter_ikfast_right_arm_plugin/src/: baxter_right_arm_ikfast_solver.cpp
baxter_moveit_config_new/: CMakeLists.txt  package.xml  package.xml~
baxter_moveit_config_new/config/: baxter.srdf  baxter.srdf~  fake_controllers.yaml  joint_limits.yaml  joint_limits.yaml~  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml
baxter_moveit_config_new/launch/: baxter_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch~  demo_backup.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  move_group_backup.launch  move_group_backup.launch~  move_group_backup_2.launch  moveit.rviz  moveit.rviz~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
